Fix quick search button alignment

--- a/frontend/src/app/+dashboard/quick-search/quick-search.component.scss
+++ b/frontend/src/app/+dashboard/quick-search/quick-search.component.scss
@@ -48,7 +48,7 @@
 
   button {
     height: 44px;
-    margin-bottom: 1px;
+    padding-top: 1px;
     ::ng-deep .mat-button-wrapper {
       letter-spacing: 1.25px;
     }
